--- a/source/index.html
+++ b/source/index.html
@@ -1,9 +1,110 @@
 ---
-title: Assignment 2 Template
+title: Welcome to our Garden
 ---
-<h1>Assignment 2 Template</h1>
 
-<p>
-  This is a main page for your collection site. You can edit
-  its contents and add new pages to this folder.
-</p>
+<link rel="stylesheet" href="/style.css" />
+
+<div id="plants">
+  {% assign recipes = collections.recipe %}
+  {% for recipe in recipes %}
+  <div
+    class="plant"
+    data-index="{{ recipe.data.index }}"
+    data-title="{{ recipe.data.title }}"
+    
+  >
+    <a href="{{ recipe.url }}">
+      <img src="{{recipe.data.photo}}" style="width: 100px" />
+
+      {{recipe.data.title}}
+    </a>
+  </div>
+    <!-- <div
+    class="plant"
+    data-index="{{ recipe.data.index }}"
+    data-title="{{ recipe.data.title }}"
+    hidden
+  >
+    <a href="{{ recipe.url }}">
+      <img src="{{recipe.data.photo}}" style="width: 100px" />
+
+      {{recipe.data.title}}
+    </a>
+  </div> -->
+  {% endfor %}
+</div>
+
+<div class="controls">
+  <button id="sortIndex">Sort by Index</button>
+  <button id="sortTitle">Sort by Title</button>
+</div>
+
+<div class="controls">
+  <button data-num="1">Show 1</button>
+  <button data-num="2">Show 2</button>
+  <button data-num="3">Show 3</button>
+</div>
+
+<script>
+  const buttons = document.querySelectorAll(".controls button");
+  const plants = document.querySelectorAll(".plant");
+
+  // buttons.forEach((btn) => {
+  //   btn.addEventListener("click", () => {
+  //     const target = btn.dataset.num;
+  //     plants.forEach((p) => {
+  //       p.hidden = p.dataset.index !== target;
+  //     });
+  //   });
+  // });
+
+  // 처음에는 index==1 항목을 보여줌
+  document.querySelector('[data-num="1"]').click();
+
+  const container = document.getElementById("plants");
+  const items = Array.from(container.children);
+
+  function render(sorted) {
+    container.innerHTML = "";
+    sorted.forEach((item) => container.appendChild(item));
+  }
+
+  document.getElementById("sortIndex").addEventListener("click", () => {
+    const sorted = [...items].sort(
+      (a, b) => Number(a.dataset.index) - Number(b.dataset.index)
+    );
+    render(sorted);
+  });
+
+  document.getElementById("sortTitle").addEventListener("click", () => {
+    const sorted = [...items].sort((a, b) =>
+      a.dataset.title.localeCompare(b.dataset.title)
+    );
+    render(sorted);
+  });
+</script>
+
+<!-- {% assign plants = collections.plant | sort: "data.index" %}
+<div class="plantListBox">
+  {% for plant in plants %}
+    <div class="plantList">
+      <a href="{{ plant.url }}">
+        {{ plant.data.title }}
+        <img src="{{ plant.data.photo }}" />
+      </a>
+    </div>
+  {% endfor %}
+</div> -->
+
+<!-- <div class="plantListBox">
+  {% for plant in collections.plant %}
+    {% if plant.data.index == 5 %}
+    <div class="plantList">
+      <a href="{{ plant.url }}">
+        {{ plant.data.title }}
+        <img src="{{ plant.data.photo }}" />
+      </a>
+    </div>
+    {% endif %}
+  {% endfor %}
+</div> -->
