--- a/source/index.html
+++ b/source/index.html
@@ -1,25 +1,73 @@
 ---
-title: Welcome to our Garden
+title: Doggies' Bowl
 ---
 
-<link rel="stylesheet" href="/style.css" />
+<div class="recCont">
+  <h1>How about this?</h1>
 
-<div id="plants">
-  {% assign recipes = collections.recipe %}
-  {% for recipe in recipes %}
-  <div
-    class="plant"
-    data-index="{{ recipe.data.index }}"
-    data-title="{{ recipe.data.title }}"
-    
-  >
-    <a href="{{ recipe.url }}">
-      <img src="{{recipe.data.photo}}" style="width: 100px" />
+<div id="picks">
+  <section id="morning-slot"><h2>Breakfast</h2><div class="card"></div></section>
+  <section id="lunch-slot"><h2>Lunch</h2><div class="card"></div></section>
+  <section id="dinner-slot"><h2>Dinner</h2><div class="card"></div></section>
+</div>
 
-      {{recipe.data.title}}
-    </a>
+<button id="reroll" type="button">Other Combinations</button>
+{%- comment -%}
+모든 recipe를 숨겨 심어둠. JS가 여기서 조건(when/style)을 만족하는 것만 뽑아 표시.
+- when: morning/lunch/dinner 중 다중값 가능 (문자열, 배열 등 어떤 형태든 허용)
+- style: western/asian/dessert 등. 없으면 tags에서 추론 (확장 가능)
+{%- endcomment -%}
+<ul id="recipe-candidates" hidden>
+  {% for r in collections.recipe %}
+  <li class="candidate"
+      data-id="{{ r.url }}"
+      data-url="{{ r.url }}"
+      data-title="{{ r.data.title | escape }}"
+      data-desc="{{ r.data.description | escape }}"
+      data-when='{{ r.data.when | jsonify | escape }}'
+      data-style='{{ r.data.style | jsonify | escape }}'
+      data-tags='{{ r.data.tags | jsonify | escape }}'
+      data-photo="{{ r.data.photo | url }}""
+       >
+  </li>
+  {% endfor %}
+</ul>
+</div>
+
+
+
+<div id="recipeCont">
+  <div class="controls">
+    <button id="sortTitle">Sort by Title</button>
+    <button id="sortIndex">Sort by Index</button>
   </div>
-    <!-- <div
+
+
+  <div id="recipeContGrid">
+    {% assign recipes = collections.recipe %} {% for recipe in recipes %}
+    <div
+      class="recipe"
+      data-index="{{ recipe.data.index }}"
+      data-title="{{ recipe.data.title }}"
+      >
+      <a href="{{ recipe.url }}">
+        <div class="previewImgBox">
+          <img src="{{recipe.data.photo}}"/>
+        </div>
+      </a>
+      <a href="{{ recipe.url }}">
+        <div class="previewTextBox">
+          <h4>
+            {{recipe.data.title}}
+          </h4>
+          <p>
+              {{recipe.data.style}} / {{recipe.data.time}} mins
+          </p>
+        </div>
+      </a>
+
+    </div>
+  <!-- <div
     class="plant"
     data-index="{{ recipe.data.index }}"
     data-title="{{ recipe.data.title }}"
@@ -32,20 +80,119 @@ title: Welcome to our Garden
     </a>
   </div> -->
   {% endfor %}
+  </div>
+  <div class="controls">
+    <button data-num="1">Show 1</button>
+    <button data-num="2">Show 2</button>
+    <button data-num="3">Show 3</button>
+  </div>
+
 </div>
 
-<div class="controls">
-  <button id="sortIndex">Sort by Index</button>
-  <button id="sortTitle">Sort by Title</button>
-</div>
 
-<div class="controls">
-  <button data-num="1">Show 1</button>
-  <button data-num="2">Show 2</button>
-  <button data-num="3">Show 3</button>
-</div>
 
 <script>
+  function normalizeList(raw) {
+    if (raw == null) return [];
+    let v = raw;
+    try { v = JSON.parse(raw); } catch (e) { /* 평문일 수 있음 */ }
+    if (Array.isArray(v)) {
+      return [...new Set(v.map(x => String(x).toLowerCase().trim()).filter(Boolean))];
+    }
+    return [...new Set(String(v).toLowerCase().split(/[\s,;|/]+/).map(s => s.trim()).filter(Boolean))];
+  }
+
+  function getCandidates() {
+    return [...document.querySelectorAll('#recipe-candidates .candidate')].map(node => {
+      const when = normalizeList(node.dataset.when);   // 예: ['morning','lunch']
+      const style = normalizeList(node.dataset.style); // 예: ['asians'] 또는 ['western','dessert']
+      return {
+        id: node.dataset.id,
+        url: node.dataset.url,
+        title: node.dataset.title || '무제 레시피',
+        desc: node.dataset.desc || '',
+        when,
+        style,
+        photo: node.dataset.photo || '',
+      };
+    });
+  }
+
+  const rnd = (n) => Math.floor(Math.random() * n);
+  const pickRandom = (arr) => arr.length ? arr[rnd(arr.length)] : null;
+
+  // 교집합 여부
+  const intersects = (a, b) => {
+    if (!a.length || !b.length) return false;
+    const setA = new Set(a);
+    return b.some(x => setA.has(x));
+  };
+
+  function pickThree(all) {
+    const lunchPool0 = all.filter(x => x.when.includes('lunch'));
+    if (!lunchPool0.length) return { morning:null, lunch:null, dinner:null };
+
+    // 점심 후보를 바꿔가며 시도 (막힐 때 탈출)
+    for (let attempt = 0; attempt < Math.min(lunchPool0.length, 50); attempt++) {
+      const lunchPick = pickRandom(lunchPool0);
+      const usedIds = new Set([lunchPick.id]);
+      const lunchStyles = lunchPick.style;
+
+      const dinnerPool = all.filter(x =>
+        x.when.includes('dinner') &&
+        !usedIds.has(x.id) &&
+        !intersects(x.style, lunchStyles)
+      );
+      const dinnerPick = pickRandom(dinnerPool);
+      if (!dinnerPick) continue;
+
+      usedIds.add(dinnerPick.id);
+
+      const morningPool = all.filter(x =>
+        x.when.includes('morning') &&
+        !usedIds.has(x.id)
+      );
+      const morningPick = pickRandom(morningPool);
+      if (!morningPick) continue;
+
+      return { morning: morningPick, lunch: lunchPick, dinner: dinnerPick };
+    }
+    return { morning:null, lunch:null, dinner:null };
+  }
+
+  function renderCard(host, item) {
+    host.innerHTML = item
+      ? `<a href="${item.url}">
+        <h3>${item.title}</h3>
+        <div class="cardImgBox"><img src="${item.photo}" /> </div>
+         
+         ${item.desc ? `<p class="muted">${item.desc}</p>` : ``}
+         <div class="muted">
+           style: ${item.style.join(', ') || '—'}
+         </div>
+         </a>`
+      : `<p class="muted">해당 조건을 만족하는 레시피가 없습니다.</p>`;
+  }
+
+  function reroll() {
+    const all = getCandidates();
+    const picks = pickThree(all);
+    renderCard(document.querySelector('#morning-slot .card'), picks.morning);
+    renderCard(document.querySelector('#lunch-slot .card'), picks.lunch);
+    renderCard(document.querySelector('#dinner-slot .card'), picks.dinner);
+  }
+  reroll();
+  document.getElementById('reroll').addEventListener('click', reroll);
+
+
+
+
+
+
+
+
+
+
   const buttons = document.querySelectorAll(".controls button");
   const plants = document.querySelectorAll(".plant");
 
@@ -58,10 +205,11 @@ title: Welcome to our Garden
   //   });
   // });
 
-  // 처음에는 index==1 항목을 보여줌
+  // show index==1 at first
   document.querySelector('[data-num="1"]').click();
 
-  const container = document.getElementById("plants");
+  // const container = document.getElementById("recipeCont");
+  const container = document.getElementById("recipeContGrid");
   const items = Array.from(container.children);
 
   function render(sorted) {
@@ -69,19 +217,57 @@ title: Welcome to our Garden
     sorted.forEach((item) => container.appendChild(item));
   }
 
-  document.getElementById("sortIndex").addEventListener("click", () => {
+  // Sortstate - 0=title / 1=index
+  let sortState = 0;
+  const sortTitleBtn = document.getElementById("sortTitle");
+  sortTitleBtn.classList.add("active");
+
+  sortTitleBtn.addEventListener("click", () => {
+    // const sorted = [...items].sort((a, b) =>
+    //   a.dataset.title.localeCompare(b.dataset.title)
+    // );
+    const sorted = [...items].sort(
+      (a, b) => Number(a.dataset.title) - Number(b.dataset.title)
+    );    render(sorted);
+    sortState = 0;
+    for(const btn of [sortIndexBtn]){
+      btn.classList.remove("active");
+    }
+
+  });
+  sortTitleBtn.addEventListener("mouseenter", () => {
+    if(sortState != 0){
+      sortTitleBtn.classList.add("active");
+    }
+  });
+  sortTitleBtn.addEventListener("mouseleave", () => {
+    if(sortState != 0){
+      sortTitleBtn.classList.remove("active");
+    }
+  });
+
+  const sortIndexBtn = document.getElementById("sortIndex");
+  sortIndexBtn.addEventListener("click", () => {
     const sorted = [...items].sort(
       (a, b) => Number(a.dataset.index) - Number(b.dataset.index)
     );
     render(sorted);
+    sortState = 1;
+    for(const btn of [sortTitleBtn]){
+      btn.classList.remove("active");
+    }
+  });
+  sortIndexBtn.addEventListener("mouseenter", () => {
+    if(sortState != 1){
+      sortIndexBtn.classList.add("active");
+    }
+  });
+  sortIndexBtn.addEventListener("mouseleave", () => {
+    if(sortState != 1){
+      sortIndexBtn.classList.remove("active");
+    }
   });
 
-  document.getElementById("sortTitle").addEventListener("click", () => {
-    const sorted = [...items].sort((a, b) =>
-      a.dataset.title.localeCompare(b.dataset.title)
-    );
-    render(sorted);
-  });
 </script>
 
 <!-- {% assign plants = collections.plant | sort: "data.index" %}
